--- a/src/app/website-links/website-links.component.html
+++ b/src/app/website-links/website-links.component.html
@@ -1,30 +1,34 @@
-<h4>Websites & Social Links</h4>
-<p>You can add links to websites you want hiring managers to see! Perhaps It will be  a link to your portfolio, LinkedIn profile, or personal website</p>
-<div >
-    <form [formGroup]="linkForm">
+<h4>Links</h4>
+<p>Choose 5 of the most important links to show your talents! Make sure they
+    match the keywords of the job listing if applying via an online system. Choose from the following curated for you by the AI based on the job title you picked or add your own links.</p>
+<div>
+    <form [formGroup]="linksForm">
         <div formArrayName="links">
-            <div class = "add-links" *ngFor="let link of links.controls; 
-             let i = index" [formGroupName]="i" class="link">
+            <div *ngFor="let link of links.controls; 
+            let i = index" [formGroupName]="i">
                 <div class="input-row">
-                        <div class="unit">
-                            <label for="label">Label</label>
-                            <input class = "form-control" type="text" 
-                            id="label" placeholder="e.g. LinkedIn" formControlName="label">
-                        </div>
-                        <div class="unit">
-                            <label for = "link">Link</label>
-                            <input class = "form-control" type="text" 
-                            id="link" placeholder="https://www.linkedin.com/..." formControlName="link">
-                        </div>
+                    <div class="unit">
+                        <label for="linkLabel">Label</label>
+                        <input class="form-control" 
+                        type="text" id="linkLabel" placeholder="e.g. LinkedIn"
+                            formControlName="linkLabel" />
+                    </div>
+                    <div class="unit">
+                        <label for="linkName">Link</label>
+                        <input class="form-control" 
+                        type="text" id="linkName" placeholder="e.g. https://www.linkedin.com/abebe-kebede"
+                            formControlName="linkLabel" />
+                    </div>
                 </div>
-                
-                <button class = "btn btn-outline-danger" type="button" (click)="removelink(i)">
+                <button class="btn btn-outline-danger" 
+                type="button" (click)="removeLink(i)">
                     Remove Link
                 </button>
             </div>
         </div>
-        <button class = "btn btn-outline-primary" type="button" (click)="addlink()">
-            Add one more link
+        <button type="button" class="btn btn-outline-primary"
+         (click)="addLink()">
+            Add Link
         </button>
     </form>
 </div>
