fixed image binding issues

--- a/src/app/resume-templates/generic-template/generic-template.component.html
+++ b/src/app/resume-templates/generic-template/generic-template.component.html
@@ -1,6 +1,6 @@
 <div class="container p-0 m-0">
-  <div class="preview-container m-0 p-0">
-    <div id="preview-window" class="bg-white mt-4 mx-4 rounded">
+  <div id="preview-window" class="preview-container m-0 p-0">
+    <div class="bg-white mt-4 mx-4 rounded">
       <div class="p-4">
         <div class="row mb-5">
           <div class="col-md-9">
@@ -67,7 +67,7 @@
   
         <!-- <hr class="my-2"> -->
   
-        <div class="row my-2" id="experiences-section">
+        <div class="row my-2" id="extra-curricular-activities-section">
           <div class="col-md-3">
             <h3 class="text-dark">Extra-curricular Activities</h3>
           </div>
