--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,8 @@
             <app-extra-curricular-activities *ngIf="extraCurricularActivitiesSection()"></app-extra-curricular-activities>
             <app-custom-section *ngIf="customSection()"></app-custom-section>
             <app-add-sections></app-add-sections>
-            <button class="btn btn-primary" onclick="window.location.href='https://jami.bio/ananya';" onclick="window.location.href='https://jami.bio/ffekirnew';" >
+            <button class="btn btn-primary" onclick="window.location.href='https://jami.bio/ffekirnew';"
+            onclick="window.location.href='https://jami.bio/ananya';"  >
                Tip The Engineers</button>
         </div>
     </div> 
