--- a/src/app/extra-curricular-activities/extra-curricular-activities.component.html
+++ b/src/app/extra-curricular-activities/extra-curricular-activities.component.html
@@ -49,7 +49,8 @@
                 <div>
                     <label for="extraCurricularActivityDescription">Description</label>
                     <textarea  type="text" class = "form-control "
-                      id="extraCurricularActivityDescription" placeholder="Extra-curricular Activity Description"
+                      id="extraCurricularActivityDescription"
+                       placeholder="Extra-curricular Activity Description"
                        formControlName="description" rows="5"></textarea>
                 </div>
                 <button class = "btn btn-outline-danger" 
