--- a/src/app/resume-templates/generic-template/generic-template.component.html
+++ b/src/app/resume-templates/generic-template/generic-template.component.html
@@ -14,7 +14,7 @@
           </div>
           <div class="col-md-3 m-auto">
             <img *ngIf="!imageData" src="https://via.placeholder.com/150" alt="John Doe" class="img-fluid rounded">
-            <img *ngIf="imageData" [src]="imageData" alt="Uploaded image" class="img-fluid rounded" height="150px">
+            <img *ngIf="imageData" [src]="imageData" alt="Uploaded image" class="rounded" height="100rem">
           </div>
         </div>
 
