--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,8 @@
     
     <div class="right-segment p-0 ">
         <div class="main-preview-window">
-                <!-- <app-plain-template></app-plain-template> -->
-                <app-generic-template></app-generic-template>
+            <app-template-preview-window> </app-template-preview-window>
+
             </div>
         </div>
     </div>
