--- a/src/app/template-preview-window/template-preview-window.component.html
+++ b/src/app/template-preview-window/template-preview-window.component.html
@@ -1,9 +1,12 @@
 <div class="container p-0 m-0">
     <div id="preview-area" class="bg-white mt-4 mx-4 rounded">
       <div id="preview-window" class="preview-container m-0 p-0">
-<app-generic-template></app-generic-template>
 
-<!--<app-modern-template></app-modern-template>
+        <app-modern-template-green></app-modern-template-green>
+<!--
+        <app-modern-template></app-modern-template>
+  <app-generic-template></app-generic-template>
+  
 <app-plain-template></app-plain-template>  -->
 
       </div>
