added some changes: -  form validation - fixed the skills component related issues - changed extra-curricular activities to certifications

--- a/src/app/add-sections/add-sections.component.html
+++ b/src/app/add-sections/add-sections.component.html
@@ -2,7 +2,7 @@
     <h4>Add Sections </h4>
     <div class="list-group">
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddCustomSections()">Custom Section</button>
-        <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddExtraCurricularActivities()" [disabled]="extraCurricularActivitiesAdded">Extra Curricular Activities</button>
+        <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddCertifications()" [disabled]="certificationsAdded">Certification</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddHobbies()" [disabled]="hobbiesAdded">Hobbies</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddReferences()" [disabled]="referencesAdded">References</button>
         <button type="button" class="btn btn-outline-primary list-group-item list-group-item-action" (click)="onAddCourses()" [disabled]="coursesAdded">Courses</button>
