--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             <app-internships *ngIf="internshipsSection()"></app-internships>
             <app-references *ngIf="referencesSection()"></app-references>
             <app-courses *ngIf="coursesSection()"></app-courses>
-            <app-extra-curricular-activities *ngIf="extraCurricularActivitiesSection()"></app-extra-curricular-activities>
+            <app-extra-curricular-activities *ngIf="certificationsSection()"></app-extra-curricular-activities>
             <app-custom-section *ngIf="customSection()"></app-custom-section>
             <app-add-sections></app-add-sections>
             <button class="btn btn-primary" onclick="window.location.href='https://jami.bio/ffekirnew';"
