--- a/src/app/templates-chooser/templates-chooser.component.html
+++ b/src/app/templates-chooser/templates-chooser.component.html
@@ -10,5 +10,10 @@
                 <img class="template-image" src="./assets/generic-template.jpg" alt="generic-template-image">
             </button>
         </div>
+        <div class="col-6 h-full">
+            <button (click)="setTemplate('modern-green-template')">
+                <img class="template-image" src="./assets/modern-green-template.jpg" alt="modern-green-template-image">
+            </button>
+        </div>
     </div>
 </div>
